Patch for SQL injection